--- a/examples/basic/meteor.html
+++ b/examples/basic/meteor.html
@@ -7,9 +7,9 @@
 </body>
 
 <template name="home">
-  <h1>Demo Page Headline<br><small>Last software release was {{deployDate}} by <a class="btn btn-default btn-xs" target="_blank" href="http://twitter.com/monbro"><i class="fa fa-twitter"></i> @monbro</a></small></h1>
+  <h1>Demo Page Headline<br><small>Last software release was {{>deployDate}} by <a class="btn btn-default btn-xs" target="_blank" href="http://twitter.com/monbro"><i class="fa fa-twitter"></i> @monbro</a></small></h1>
 
   <p>
-    Welcome to this example of <a href="">test</a>!
+    Welcome to this example of <a href="https://github.com/monbro/meteor-last-software-release-package" target="_blank">test</a>!
   </p>
 </template>
